# WEB-home-work-2

./: Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
BotDan.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
crutching_botdan/: main.py
