[tool.poetry]
name = "home-work-2"
version = "0.1.0"
description = ""
authors = ["IamSerJanGO <130689026+IamSerJanGO@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
build = "1.0.3"
certifi = "2023.7.22"
charset-normalizer = "3.3.0"
colorama = "0.4.6"
docutils = "0.20.1"
idna = "3.4"
importlib-metadata = "6.8.0"
jaraco-classes = "3.3.0"
keyring = "24.2.0"
markdown-it-py = "3.0.0"
mdurl = "0.1.2"
more-itertools = "10.1.0"
nh3 = "0.2.14"
packaging = "23.2"
pkginfo = "1.9.6"
pygments = "2.16.1"
pyproject-hooks = "1.0.0"
pywin32-ctypes = "0.2.2"
readme-renderer = "42.0"
requests = "2.31.0"
requests-toolbelt = "1.0.0"
rfc3986 = "2.0.0"
rich = "13.6.0"
twine = "4.0.2"
urllib3 = "2.0.7"
zipp = "3.17.0"
aiosqlite = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
